sandbox/output
Patient.java:27: error: cannot find symbol
            prescriptionA.getDispenseDate().plusDays(prescriptionA.getDaysSupply());
                                                                  ^
  symbol:   method getDaysSupply()
  location: variable prescriptionA of type Prescription
Patient.java:33: error: cannot find symbol
            prescriptionB.getDispenseDate().plusDays(prescriptionB.getDaysSupply());
                                                                  ^
  symbol:   method getDaysSupply()
  location: variable prescriptionB of type Prescription
2 errors
